@@ -8,11 +8,15 @@ plugins {
 tasks {
     withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
         kotlinOptions.jvmTarget = "19"
-        kotlinOptions.freeCompilerArgs = listOf("-Xcontext-receivers")
+        kotlinOptions.freeCompilerArgs = listOf("-Xcontext-receivers", "-Xadd-modules=jdk.incubator.concurrent")
     }
 
     withType<Test> {
         useJUnit()
+    }
+
+    withType<Test>().all {
+        allJvmArgs = listOf("--enable-preview")
     }
 }
 
